Also send real TileState if present when removing fake sign